update swagger details
